<resources>
    <string name="app_name">Sob Controle</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Título</string>
    <string name="nav_header_subtitle">Sub-Título</string>
    <string name="nav_header_desc">Cabeçalho</string>
    <string name="action_settings">Configurar</string>


    <string name="home_second">Home Second</string>
    <string name="usu_rio">Usuário</string>
    <string name="data">data</string>
    <string name="turno">Turno</string>
    <string name="img">img</string>
    <string name="encerrar">Encerrar</string>


    <string name="nome">Nome</string>
    <string name="endere_o">Endereço</string>
    <string name="telefone">Telefone</string>
    <string name="observa_o">Observação</string>
    <string name="descartar">Descartar</string>
    <string name="salvar">Salvar</string>
    <string name="opcoes">Opções</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="sair">Sair</string>
    <string name="texto">Sistema para o controle de valores.\nO correto preenchimeto garante \num controle maior.</string>
    <string name="respons_vel">Responsável</string>
    <string name="funcion_rio">Funcionário</string>
    <string name="date">Data</string>
    <string name="data_numero">00/00/00</string>
    <string name="fdo_caixa">Fdo Caixa</string>
    <string name="valor">R$ 0,00</string>
    <string name="vales">Vales</string>
    <string name="cheque">Cheque</string>

    <string name="pg_manual">Pg Manual</string>
    <string name="pg_funcion_rio">Pg Funcionário</string>
    <string name="despesas">Despesas</string>
    <string name="desp_extras">Desp. Extras</string>
    <string name="cartoes">Cartões</string>
    <string name="outros">Outros</string>
    <string name="m_quina">Máquina</string>
    <string name="entrada">Entrada</string>
    <string name="saida">Saida</string>
    <string name="gravar">Gravar</string>
    <string name="leitura">Leitura</string>
    <string name="n_mero">Número</string>
    <string name="buscar">Buscar</string>
    <string name="n_mero_da_m_quina">Número da Máquina</string>
    <string name="add_pessoa">Add Pessoa</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="empresa">Empresa</string>
    <string name="listar">Listar</string>
    <string name="Fechar">fechar</string>
    <string name="Abrir">abrir</string>
    <string name="voltar">Voltar</string>
    <string name="dados_da_empresa">Dados da Empresa</string>
    <string name="apagar">Apagar</string>
    <string name="atualizar">Atualizar</string>

    <string name="atencao">Atenção</string>

    <string name="cargo">Cargo</string>
    <string name="descreva_a_quantidade_de_turno_numero">Descreva com números.</string>
    <string name="descreva_a_quantidade_de_turno_letra">Descreva com letras.</string>


    <string name="dados_dos_turnos">Dados dos Turnos</string>
    <string name="dados_de_turnos">Dados de Turnos</string>
    <string name="relacionamento">Relacionamento</string>
    <string name="alias">Apelido</string>
    <string name="celular">Celular</string>

    <string name="escrito">Escrito</string>


    <string name="msg_dados_atualizados">Dados Atualizados</string>
    <string name="msg_atencao_atualizar">Você tem certeza que quer Atualizar os dados?</string>

    <string name="msg_atencao_apagar">Você tem certeza que quer apagar os dados?</string>
    <string name="msg_acao_cancelada">Ação cancelada.</string>

    <string name="msg_erro_dados_atualizados">ERRO: Dados não Atualizados</string>
    <string name="msg_erro_campos_vazios">Preenchas os campos corretamente.</string>

    <string name="msg_erro_deletar">ERRO: Dados não deletados</string>
    <string name="msg_deletar">Dados deletados com Sucesso</string>
    <string name="tipos_de_bon_s">Tipos de Bonûs</string>
    <string name="apelido">Apelido</string>
    <string name="atualizar_dados_pessoa">Atualizar Dados Pessoa</string>
    <string name="numeral">Numeral</string>
    <string name="msg_salvando_dados">Salvando os dados</string>
    <string name="msg_erro_salvando_dados">ERRO Salvando os dados</string>
    <string name="escolhoa_opcao">Escolha uma Opção</string>
    <string name="add_vale_feito">Add Vale Feito</string>
    <string name="status_cheque">Status Cheque</string>
    <string name="add_vale_pago">Add Vale Pago</string>
    <string name="add_bonus">Add Bônus</string>
    <string name="add_cartoes">Add Cartões</string>
    <string name="add_cart_es">Add Cartões</string>
    <string name="primeiros_cadastros">Primeiros Cadastros</string>
    <string name="add_ao_caixa">Add ao Caixa</string>
    <string name="relatorios">Relatorios</string>
    <string name="configura_es">Configurações</string>
    <string name="caixa">Caixa</string>
    <string name="b_nus">Bônus</string>
    <string name="add_despesa">Add Despesa</string>
    <string name="despesa">Despesa</string>


</resources>
