<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:orientation="vertical"
    android:background="@drawable/fundo_degrade"
    android:gravity="center"
    android:layout_height="wrap_content"
    tools:ignore="MissingDefaultResource">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_01"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/leitura"
        android:gravity="center"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/branco"/>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/n_mero_da_m_quina"
        android:textColor="@color/branco"/>

    <EditText
        android:id="@+id/dia_et_numero"
        android:layout_width="150dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:inputType="number"/>


    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/entrada"
        android:textColor="@color/branco"/>

    <EditText
        android:id="@+id/dia_et_entrada"
        android:layout_width="150dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:inputType="number"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/saida"
        android:textColor="@color/branco"/>

    <EditText
        android:id="@+id/dia_et_saida"
        android:layout_width="150dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dia_bt_cancelar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/sair"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/dia_bt_salvar"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/salvar"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>