<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_degrade"
    android:orientation="vertical"
    android:gravity="center"
    tools:ignore="MissingDefaultResource">


    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/pessoa"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/branco" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/imagens"
        android:layout_height="@dimen/imagens"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/icon2"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/img" />


    <EditText
        android:id="@+id/dia_pes_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/brancoOpaco"
        android:layout_marginTop="10dp"
        android:text="@string/nome"
        android:textColor="@color/branco"
        android:gravity="center"
        android:inputType="text" />



    <EditText
        android:id="@+id/dia_pes_alias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/brancoOpaco"
        android:layout_marginTop="10dp"
        android:text="@string/alias"
        android:textColor="@color/branco"
        android:gravity="center"
        android:inputType="text" />

    <EditText
        android:id="@+id/dia_pes_celular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/brancoOpaco"
        android:layout_marginTop="10dp"
        android:text="@string/celular"
        android:textColor="@color/branco"
        android:gravity="center"
        android:inputType="number" />

    <EditText
        android:id="@+id/dia_pes_relacionamento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/brancoOpaco"
        android:layout_marginTop="10dp"
        android:text="@string/nome"
        android:textColor="@color/branco"
        android:gravity="center"
        android:inputType="text" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >

        <Button
            android:id="@+id/dia_pes_btvoltar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/voltar" />

        <Button
            android:id="@+id/dia_pes_btdeletar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apagar" />

        <Button
            android:id="@+id/dia_pes_btatualizar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/atualizar" />

    </LinearLayout>


</LinearLayout>