<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/bg_btn"
    android:gravity="start"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/nav_header_imageView"
        android:layout_width="50dp"
        android:layout_marginTop="15dp"
        android:layout_height="50dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/icon1" />

    <TextView
        android:id="@+id/nav_header_textViewNome"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:gravity="start|center"
        android:text="@string/usu_rio"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/nav_header_textViewData"
        android:layout_width="match_parent"
        android:gravity="start|center"
        android:layout_height="20dp"
        android:text="@string/data" />

    <TextView
        android:id="@+id/nav_header_textViewTurno"
        android:layout_width="match_parent"
        android:gravity="start|center"
        android:layout_height="20dp"
        android:text="@string/turno" />

</LinearLayout>
