<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/fundo_degrade"
    android:orientation="vertical"
    tools:ignore="MissingDefaultResource">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/imagens"
        android:layout_height="@dimen/imagens"
        android:layout_marginTop="64dp"
        android:src="@drawable/icon2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/turno"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        android:textColor="@color/branco" />

    <EditText
        android:id="@+id/dia_turno_numero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/textview1"
        android:background="@drawable/bg_btn"
        android:text="@string/n_mero"
        android:textColorHint="@color/branco"
        android:textColor="@color/branco"
        android:inputType="number"/>

    <EditText
        android:id="@+id/dia_turno_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/dia_turno_numero"
        android:background="@drawable/bg_btn"
        android:hint="@string/nome"
        android:textColor="@color/branco"
        android:textColorHint="@color/branco"
        android:inputType="text" />



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dia_turno_nome">

        <Button
            android:id="@+id/dia_turno_btvoltar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/voltar" />

        <Button
            android:id="@+id/dia_turno_btdeletar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/apagar" />

        <Button
            android:id="@+id/dia_turno_btatualizar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/atualizar" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>