<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_degrade"
    tools:context=".empresa.EmpresaActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:layout_marginBottom="242dp"
        app:layout_constraintBottom_toTopOf="@+id/button_acempre_listar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:gravity="center"
        android:text="@string/dados_da_empresa"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/branco"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editText_empresa_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nome"
        android:inputType="text"
        android:textColor="@color/branco"
        android:textColorHint="@color/branco"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText_empresa_endereco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/endere_o"
        android:inputType="text"
        android:textColor="@color/branco"
        android:textColorHint="@color/branco"
        app:layout_constraintStart_toStartOf="@+id/editText_empresa_nome"
        app:layout_constraintTop_toBottomOf="@+id/editText_empresa_nome" />

    <EditText
        android:id="@+id/editText_empresa_telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="3dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/telefone"
        android:inputType="number"
        android:textColor="@color/branco"
        android:textColorHint="@color/branco"
        app:layout_constraintEnd_toEndOf="@+id/editText_empresa_endereco"
        app:layout_constraintTop_toBottomOf="@+id/editText_empresa_endereco" />

    <Button
        android:id="@+id/button_acempre_grava"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="110dp"
        android:background="@drawable/bg_btn"
        android:onClick="onClickEmpresa"
        android:text="@string/gravar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_acempre_listar" />

    <Button
        android:id="@+id/button_acempre_listar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="129dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_btn"
        android:onClick="onClickEmpresa"
        android:text="@string/listar"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_acempre_grava"
        app:layout_constraintEnd_toStartOf="@+id/button_acempre_grava"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_empresa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="23dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/bg_btn"
        app:srcCompat="@android:drawable/ic_menu_revert" />


</androidx.constraintlayout.widget.ConstraintLayout>